fix contact page on mobile screen

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -70,6 +70,9 @@
 
 // Small screens
 @include mediaSm{
+    body{
+        display: block;
+    }
     main{
         padding: 2rem;
         #home h1{
